# ai-governance

./: .gitignore  AGENTS.md  ANALISE_PROJETO.md  CHANGELOG.md  README.md  install.sh  upgrade.sh
.claude/agents/: prd-writer.md  project-analyzer.md  refactorer.md  reviewer.md  task-executor-all.md  task-executor.md  task-planner.md  technical-specification-writer.md
.claude/hooks/: validate-governance.sh  validate-preload.sh
.claude/rules/: governance.md
.claude/scripts/: validate-bugfix-evidence.sh  validate-refactor-evidence.sh  validate-task-evidence.sh
.claude/skills/: execute-task-all
.codex/: config.toml
.gemini/commands/: analyze-project.toml  create-prd.toml  create-tasks.toml  create-technical-specification.toml  execute-task.toml  go-implementation.toml  node-implementation.toml  (+3 more)
scripts/: check-rf-coverage.sh  check-skill-prerequisites.sh  check-spec-drift.sh  check-token-budget.sh  collect-efficacy-metrics.sh  context-metrics.py  generate-adapters.sh  generate-gemini-commands.sh  governance-wrapper.sh  loop-execute-tasks.sh  scaffold-lang-skill.sh  semver-next.sh  trace-requirements.sh  update-changelog-release.sh  update-version.sh
tests/: test-adapter-parity.sh  test-codex-e2e.sh  test-context-metrics.sh  test-copilot-e2e.sh  test-e2e.sh  test-evidence-validators.sh  test-generate-governance.sh  test-harness-execution.sh  test-install.sh  test-loop-execute-tasks.sh  test-mutation.bats  test-mutation.sh  test-scripts.sh  test-skill-integration.sh  test-skill-references.sh  test-upgrade.sh
tests/fixtures/python-fastapi/: pyproject.toml
(+167 files in other folders)
